@@ -1,0 +1,47 @@
+# Copyright (C) 2009 Free Software Foundation, Inc.
+#
+# This file is part of DejaGnu.
+#
+# DejaGnu is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# DejaGnu is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with DejaGnu; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin Street - Fifth Floor, Boston, MA 02110-1301, USA.
+
+# Contributed by DJ Delorie <dj@redhat.com>.
+
+set_board_info target_install {rx-elf}
+
+# No support for argument passing
+set_board_info noargs 1
+
+# No support for signals either.
+set_board_info gdb,nosignals 1
+
+# The simulator does not use the remote protocol, so it can't support the
+# remote protocol packets used by GDB's fileio.exp test.
+set_board_info gdb,nofileio 1
+
+load_generic_config "sim"
+
+load_base_board_description "basic-sim"
+
+setup_sim rx
+
+process_multilib_options ""
+
+set_board_info compiler  "[find_gcc]"
+set_board_info cflags    "[newlib_include_flags] -msim"
+set_board_info ldflags   "[libgloss_link_flags] [newlib_link_flags]"
+
+# Used by a few gcc.c-torture testcases to delimit how large the stack can
+# be.  Needed for the small integer multilibs.
+set_board_info gcc,stack_size  4096
